--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parse": "^0.1.0",
     "express": "^4.17.1",
     "http": "0.0.0",
+    "http-status": "^1.3.2",
     "morgan": "^1.9.1",
     "pg": "^7.12.0",
     "sequelize": "^5.11.0",
@@ -25,6 +26,7 @@
     "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.1.7",
     "@types/express": "^4.17.0",
+    "@types/http-status": "^0.2.30",
     "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.36",
     "@types/sequelize": "^4.28.4",
