--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "tvSantiago",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.5",
     "body-parse": "^0.1.0",
     "express": "^4.17.1",
     "http": "0.0.0",
@@ -23,6 +24,7 @@
     "sequelize-cli": "^5.5.0"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.27",
     "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.1.7",
     "@types/express": "^4.17.0",
