--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "set node_env=development && ts-node ./server/server.ts",
     "builded": "set node_env=development && node ./build/server/server.js",
+    "builded-test": "set node_env=test && node ./build/server/server.js",
     "unit-test": "set node_env=test && mocha --opts ./build/tests/unit/config/mocha.opts ./build/tests/unit/unit.test.js",
     "integration-test": "set node_env=test && mocha --opts ./build/tests/integration/config/mocha.opts ./build/tests/integration/integration.test.js",
     "test": "echo \"Error: no test specified\" && exit 1"
