--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "http-status": "^1.3.2",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "pg": "^7.12.0",
     "sequelize": "^5.11.0",
@@ -30,6 +31,7 @@
     "@types/chai": "^4.1.7",
     "@types/express": "^4.17.0",
     "@types/http-status": "^0.2.30",
+    "@types/lodash": "^4.14.136",
     "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.36",
     "@types/sequelize": "^4.28.4",
