--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
       "include": [
         "server/**/*.ts",
         "server/*.ts",
-        "tests/**/*.ts"
+        "tests/**/*.ts", "server/models/index.js"
       ],
       "exclude": [
         "node_modules"
