--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "http-status": "^1.3.2",
+    "jwt-simple": "^0.5.6",
     "lodash": "^4.17.15",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.12.0",
     "sequelize": "^5.11.0",
     "sequelize-cli": "^5.5.0"
@@ -31,9 +34,12 @@
     "@types/chai": "^4.1.7",
     "@types/express": "^4.17.0",
     "@types/http-status": "^0.2.30",
+    "@types/jwt-simple": "^0.5.33",
     "@types/lodash": "^4.14.136",
     "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.36",
+    "@types/passport": "^1.0.0",
+    "@types/passport-jwt": "^3.0.1",
     "@types/sequelize": "^4.28.4",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
