--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "tvSantiago",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bluebird": "^3.5.5",
     "body-parse": "^0.1.0",
     "express": "^4.17.1",
@@ -29,6 +30,7 @@
     "sequelize-cli": "^5.5.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.27",
     "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.1.7",
