--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "@types/sequelize": "^4.28.4",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
+    "istanbul": "^0.4.5",
     "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
     "supertest": "^4.0.2",
     "testdouble": "^3.12.2",
     "ts-node": "^8.3.0",
