--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server/server.ts",
   "scripts": {
     "start": "set node_env=development && ts-node ./server/server.ts",
-    "builded": "set node_env=production && node ./build/server/server.js",
-    "unit-test": "set node_env=test && mocha --opts ./build/tests/unit/config/mocha.opts ./build/tests/unit/unit.test.js",
-    "integration-test": "set node_env=test && mocha --opts ./build/tests/integration/config/mocha.opts ./build/tests/integration/integration.test.js",
+    "builded": "set node_env=production && node ./dist/server/server.js",
+    "unit-test": "set node_env=test && mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
+    "integration-test": "set node_env=test && mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
     "integration-coverage": "nyc --reporter=html npm run integration-test",
     "unit-coverage": "nyc --reporter=html npm run unit-test"
   },
@@ -45,6 +45,9 @@
     "@types/sequelize": "^4.28.4",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-typescript": "^5.0.1",
     "istanbul": "^0.4.5",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
