--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.ts",
   "scripts": {
     "start": "set node_env=development && set PORT=5000 && ts-node ./server/server.ts",
-    "builded": "set node_env=production && set PORT=5000 && node ./dist/server/server.js",
+    "builded": "set node_env=test && set PORT=5000 && node ./dist/server/server.js",
     "unit-test": "set node_env=test && mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
     "integration-test": "set node_env=test && mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
     "integration-coverage": "nyc --reporter=html npm run integration-test",
@@ -45,6 +45,7 @@
     "@types/sequelize": "^4.28.4",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
+    "del": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-typescript": "^5.0.1",
