--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - postgresql
 env:
   gloabal:
-    - NODE_ENV: test
+    - NODE_ENV: travis
     - TRAVIS: true
 addons:
   postgresql: '9.4'
