--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "builded": "set node_env=test && set PORT=5000 && node ./dist/server/server.js",
     "unit-test": "set node_env=test && mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
     "integration-test": "set node_env=test && mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
-    "integration-coverage": "nyc --reporter=html npm run integration-test",
-    "unit-coverage": "nyc --reporter=html npm run unit-test"
+    "unit-coverage": "nyc --reporter=html npm run unit-test",
+    "integration-coverage": "nyc --reporter=html npm run integration-test"
   },
   "author": "tvSantiago",
   "license": "ISC",
