--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - postgresql
 env:
   gloabal:
-    - NODE_ENV: test
+    - NODE_ENV: integration
     - TRAVIS: true
 addons:
   postgresql: '9.4'
@@ -20,5 +20,5 @@ before_script:
   - npm install
   - gulp
 script:
-  - npm run unit-test
-  - npm run integration-test
+  - npm run unit-test-travis
+  - npm run integration-test-travis
