--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API REST desenvolvida utilizando TypeScript",
   "main": "server/server.ts",
   "scripts": {
-    "start": "set NODE_ENV=development && set PORT=5000 && ts-node ./server/server.ts",
+    "start": "set NODE_ENV=development && set PORT=5000 && ts-node ./bootstrap.ts",
     "builded": "set NODE_ENV=test && set PORT=5000 && node ./dist/server/server.js",
     "unit-test": "set NODE_ENV=test && mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
     "integration-test": "set NODE_ENV=test && mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
@@ -19,6 +19,7 @@
     "bcrypt": "^3.0.6",
     "bluebird": "^3.5.5",
     "body-parse": "^0.1.0",
+    "custom-env": "^1.0.2",
     "express": "^4.17.1",
     "http": "0.0.0",
     "http-status": "^1.3.2",
