--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.ts",
   "scripts": {
     "start": "set NODE_ENV=development && set PORT=5000 && ts-node ./server/server.ts",
-    "builded": "set NODE_ENV=test && set PORT=5000 && node ./dist/server/server.js",
+    "builded": "set NODE_ENV=test && node ./dist/server/server.js",
     "unit-test": "set NODE_ENV=test && mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
     "integration-test": "set NODE_ENV=test && mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
     "unit-coverage": "nyc --reporter=html npm run unit-test",
