--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,23 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
-        "outDir": "./dist",
-        "typeRoots": [
-          "./node_modules/@types"
-        ],
-        "types": [
-          "node"
-        ]
-      },
-      "include": [
-        "server/**/*.ts",
-        "server/*.ts",
-        "tests/**/*.ts"
-      ],
-      "exclude": [
-        "node_modules"
-      ],
-      "compileOnSave": true,
-      "buildOnSave": true
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "outDir": "./dist",
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
+    "types": [
+      "node"
+    ]
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/*.ts",
+    "tests/**/*.ts",
+  ],
+  "exclude": [
+    "node_modules"
+  ],
+  "compileOnSave": true,
+  "buildOnSave": true
 }
