--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
 before_script:
   - psql -c 'create database ts_api_test;' -U postgres
   - npm i -g sequelize-cli gulp-cli
-  - cd server/
+  - cd src/
   - sequelize db:migrate --env test
   - npm install
   - gulp
