--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "set NODE_ENV=development && set PORT=5000 && ts-node ./src/server/server.ts",
     "builded": "set NODE_ENV=test && node ./dist/src/server/server.js",
+    "debug": "node --nolazy --inspect-brk=3000 ./dist/src/server/server.js",
     "unit-test": "set NODE_ENV=test && mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
     "integration-test": "set NODE_ENV=test && mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
     "unit-coverage": "nyc --reporter=html npm run unit-test",
