Refatorando codigo da aplicação

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "API REST desenvolvida utilizando TypeScript",
   "main": "server/server.ts",
   "scripts": {
-    "start": "set NODE_ENV=development && set PORT=5000 && ts-node ./src/server/server.ts",
-    "builded": "set NODE_ENV=test && node ./dist/src/server/server.js",
-    "debug": "node --nolazy --inspect-brk=3000 ./dist/src/server/server.js",
+    "start": "set NODE_ENV=development && ts-node ./bootstrap.ts",
+    "builded": "set NODE_ENV=test && node ./dist/bootstrap.js",
+    "debug": "node --nolazy --inspect-brk=3000 ./dist/bootstrap.js",
     "unit-test": "set NODE_ENV=test && mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
     "integration-test": "set NODE_ENV=test && mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
     "unit-coverage": "nyc --reporter=html npm run unit-test",
